src/cpp/include/mujoco/mujoco.h


MJAPI int mj_setLengthRange(mjModel* m, mjData* d, int index,
                            const mjLROpt* opt, char* error, int error_sz);
MJAPI mjSpec* mj_makeSpec(void);
MJAPI mjSpec* mj_copySpec(const mjSpec* s);
MJAPI void mj_deleteSpec(mjSpec* s);
MJAPI int mjs_activatePlugin(mjSpec* s, const char* name);
MJAPI int mjs_setDeepCopy(mjSpec* s, int deepcopy);
MJAPI void mj_printFormattedModel(const mjModel* m, const char* filename, const char* float_format);
MJAPI void mj_printModel(const mjModel* m, const char* filename);
MJAPI void mj_printFormattedData(const mjModel* m, const mjData* d, const char* filename,
                                 const char* float_format);
MJAPI void mj_printData(const mjModel* m, const mjData* d, const char* filename);
MJAPI void mju_printMat(const mjtNum* mat, int nr, int nc);
MJAPI void mju_printMatSparse(const mjtNum* mat, int nr,
                              const int* rownnz, const int* rowadr, const int* colind);
MJAPI int mj_printSchema(const char* filename, char* buffer, int buffer_sz,
                         int flg_html, int flg_pad);
MJAPI void mj_fwdPosition(const mjModel* m, mjData* d);
MJAPI void mj_fwdVelocity(const mjModel* m, mjData* d);
MJAPI void mj_fwdActuation(const mjModel* m, mjData* d);
MJAPI void mj_fwdAcceleration(const mjModel* m, mjData* d);
MJAPI void mj_fwdConstraint(const mjModel* m, mjData* d);
MJAPI void mj_Euler(const mjModel* m, mjData* d);
MJAPI void mj_RungeKutta(const mjModel* m, mjData* d, int N);
MJAPI void mj_implicit(const mjModel* m, mjData* d);
MJAPI void mj_invPosition(const mjModel* m, mjData* d);
MJAPI void mj_invVelocity(const mjModel* m, mjData* d);
MJAPI void mj_invConstraint(const mjModel* m, mjData* d);
MJAPI void mj_compareFwdInv(const mjModel* m, mjData* d);
MJAPI void mj_sensorPos(const mjModel* m, mjData* d);
MJAPI void mj_sensorVel(const mjModel* m, mjData* d);
MJAPI void mj_sensorAcc(const mjModel* m, mjData* d);
MJAPI void mj_energyPos(const mjModel* m, mjData* d);
MJAPI void mj_energyVel(const mjModel* m, mjData* d);
MJAPI void mj_checkPos(const mjModel* m, mjData* d);
MJAPI void mj_checkVel(const mjModel* m, mjData* d);
MJAPI void mj_checkAcc(const mjModel* m, mjData* d);
MJAPI void mj_kinematics(const mjModel* m, mjData* d);
MJAPI void mj_comPos(const mjModel* m, mjData* d);
MJAPI void mj_camlight(const mjModel* m, mjData* d);
MJAPI void mj_flex(const mjModel* m, mjData* d);
MJAPI void mj_tendon(const mjModel* m, mjData* d);
MJAPI void mj_transmission(const mjModel* m, mjData* d);
MJAPI void mj_crb(const mjModel* m, mjData* d);
MJAPI void mj_factorM(const mjModel* m, mjData* d);
MJAPI void mj_solveM(const mjModel* m, mjData* d, mjtNum* x, const mjtNum* y, int n);
MJAPI void mj_solveM2(const mjModel* m, mjData* d, mjtNum* x, const mjtNum* y,
                      const mjtNum* sqrtInvD, int n);
MJAPI void mj_comVel(const mjModel* m, mjData* d);
MJAPI void mj_passive(const mjModel* m, mjData* d);
MJAPI void mj_subtreeVel(const mjModel* m, mjData* d);
MJAPI void mj_rne(const mjModel* m, mjData* d, int flg_acc, mjtNum* result);
MJAPI void mj_rnePostConstraint(const mjModel* m, mjData* d);
MJAPI void mj_collision(const mjModel* m, mjData* d);
MJAPI void mj_makeConstraint(const mjModel* m, mjData* d);
MJAPI void mj_island(const mjModel* m, mjData* d);
MJAPI void mj_projectConstraint(const mjModel* m, mjData* d);
MJAPI void mj_referenceConstraint(const mjModel* m, mjData* d);
MJAPI void mj_constraintUpdate(const mjModel* m, mjData* d, const mjtNum* jar,
                               mjtNum cost[1], int flg_coneHessian);
MJAPI int mj_stateSize(const mjModel* m, unsigned int spec);
MJAPI void mj_getState(const mjModel* m, const mjData* d, mjtNum* state, unsigned int spec);
MJAPI void mj_setState(const mjModel* m, mjData* d, const mjtNum* state, unsigned int spec);
MJAPI void mj_setKeyframe(mjModel* m, const mjData* d, int k);
MJAPI int mj_addContact(const mjModel* m, mjData* d, const mjContact* con);
MJAPI int mj_isPyramidal(const mjModel* m);
MJAPI int mj_isSparse(const mjModel* m);
MJAPI int mj_isDual(const mjModel* m);
MJAPI void mj_mulJacVec(const mjModel* m, const mjData* d, mjtNum* res, const mjtNum* vec);
MJAPI void mj_mulJacTVec(const mjModel* m, const mjData* d, mjtNum* res, const mjtNum* vec);
MJAPI void mj_jac(const mjModel* m, const mjData* d, mjtNum* jacp, mjtNum* jacr,
                  const mjtNum point[3], int body);
MJAPI void mj_jacBody(const mjModel* m, const mjData* d, mjtNum* jacp, mjtNum* jacr, int body);
MJAPI void mj_jacBodyCom(const mjModel* m, const mjData* d, mjtNum* jacp, mjtNum* jacr, int body);
MJAPI void mj_jacSubtreeCom(const mjModel* m, mjData* d, mjtNum* jacp, int body);
MJAPI void mj_jacGeom(const mjModel* m, const mjData* d, mjtNum* jacp, mjtNum* jacr, int geom);
MJAPI void mj_jacSite(const mjModel* m, const mjData* d, mjtNum* jacp, mjtNum* jacr, int site);
MJAPI void mj_jacPointAxis(const mjModel* m, mjData* d, mjtNum* jacPoint, mjtNum* jacAxis,
                           const mjtNum point[3], const mjtNum axis[3], int body);
MJAPI void mj_jacDot(const mjModel* m, const mjData* d, mjtNum* jacp, mjtNum* jacr,
                     const mjtNum point[3], int body);
MJAPI void mj_angmomMat(const mjModel* m, mjData* d, mjtNum* mat, int body);
MJAPI int mj_name2id(const mjModel* m, int type, const char* name);
MJAPI const char* mj_id2name(const mjModel* m, int type, int id);
MJAPI void mj_fullM(const mjModel* m, mjtNum* dst, const mjtNum* M);
MJAPI void mj_mulM(const mjModel* m, const mjData* d, mjtNum* res, const mjtNum* vec);
MJAPI void mj_mulM2(const mjModel* m, const mjData* d, mjtNum* res, const mjtNum* vec);
MJAPI void mj_addM(const mjModel* m, mjData* d, mjtNum* dst, int* rownnz, int* rowadr, int* colind);
MJAPI void mj_applyFT(const mjModel* m, mjData* d, const mjtNum force[3], const mjtNum torque[3],
                      const mjtNum point[3], int body, mjtNum* qfrc_target);
MJAPI void mj_objectVelocity(const mjModel* m, const mjData* d,
                             int objtype, int objid, mjtNum res[6], int flg_local);
MJAPI void mj_objectAcceleration(const mjModel* m, const mjData* d,
                                 int objtype, int objid, mjtNum res[6], int flg_local);
MJAPI mjtNum mj_geomDistance(const mjModel* m, const mjData* d, int geom1, int geom2,
                             mjtNum distmax, mjtNum fromto[6]);
MJAPI void mj_contactForce(const mjModel* m, const mjData* d, int id, mjtNum result[6]);
MJAPI void mj_differentiatePos(const mjModel* m, mjtNum* qvel, mjtNum dt,
                               const mjtNum* qpos1, const mjtNum* qpos2);
MJAPI void mj_integratePos(const mjModel* m, mjtNum* qpos, const mjtNum* qvel, mjtNum dt);
MJAPI void mj_normalizeQuat(const mjModel* m, mjtNum* qpos);
MJAPI void mj_local2Global(mjData* d, mjtNum xpos[3], mjtNum xmat[9], const mjtNum pos[3],
                           const mjtNum quat[4], int body, mjtByte sameframe);