src/cpp/include/mujoco/mjspec.h

  
  typedef void mjString;
typedef struct mjsElement_ {       
  mjtObj elemtype;                 
  uint64_t signature;              
} mjsElement;
typedef struct mjsCompiler_ {      
  mjtByte autolimits;              
  double boundmass;                
  double boundinertia;             
  double settotalmass;             
  mjtByte balanceinertia;          
  mjtByte fitaabb;                 
  mjtByte degree;                  
  char eulerseq[3];                
  mjtByte discardvisual;           
  mjtByte usethread;               
  mjtByte fusestatic;              
  int inertiafromgeom;             
  int inertiagrouprange[2];        
  mjtByte saveinertial;            
  int alignfree;                   
  mjLROpt LRopt;                   
} mjsCompiler;
typedef struct mjSpec_ {           
  mjsElement* element;             
  mjString* modelname;             
  mjsCompiler compiler;            
  mjtByte strippath;               
  mjString* meshdir;               
  mjString* texturedir;            
  mjOption option;                 
  mjVisual visual;                 
  mjStatistic stat;                
  size_t memory;                   
  int nemax;                       
  int nuserdata;                   
  int nuser_body;                  
  int nuser_jnt;                   
  int nuser_geom;                  
  int nuser_site;                  
  int nuser_cam;                   
  int nuser_tendon;                
  int nuser_actuator;              
  int nuser_sensor;                
  int nkey;                        
  int njmax;                       
  int nconmax;                     
  size_t nstack;                   
  mjString* comment;               
  mjString* modelfiledir;          
  mjtByte hasImplicitPluginElem;   
} mjSpec;